--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,37 @@
 astroid==2.9.3
+attrs==21.4.0
+autopep8==1.6.0
 bandit==1.7.2
 black==22.1.0
 cfgv==3.3.1
 click==8.0.3
 distlib==0.3.4
+Faker==12.3.0
 filelock==3.4.2
 flake8==4.0.1
 gitdb==4.0.9
 GitPython==3.1.26
 greenlet==1.1.2
 identify==2.4.9
+iniconfig==1.1.1
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.6.0
+packaging==21.3
 pathspec==0.9.0
 pbr==5.8.1
 platformdirs==2.5.0
+pluggy==1.0.0
 pre-commit==2.17.0
+py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pylint==2.12.2
+pyparsing==3.0.7
+pytest==7.0.0
+python-dateutil==2.8.2
 PyYAML==6.0
 six==1.16.0
 smmap==5.0.0
